src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --background: #EAE8E3;
  --foreground: #1A1A1A;
}

body {
  color: var(--foreground);
  background: var(--background);
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  cursor: none;
}

@media (hover: none) and (pointer: coarse) {
  body, a, button, [role="button"], .hover-target {
    cursor: auto !important;
  }
}

a,
button,
[role="button"] {
  cursor: none;
}

::selection {
  background-color: #1A1A1A;
  color: #EAE8E3;
}

::-webkit-scrollbar {
  width: 0px;
  background: transparent;
}

.no-scroll {
  overflow: hidden !important;
  height: 100vh;
}

.outline-text {
  color: transparent;
  -webkit-text-stroke: 2px #EAE8E3;
}

@media (max-width: 768px) {
  .outline-text {
    -webkit-text-stroke: 1px #EAE8E3;
  }
}

